# chat-de-voz-con-python

./: README.md  compile.ps1  devices.py  main.spec  pyproject.toml  server.py
src/: main.py
src/audio/: audio.py
src/client/: client.py
src/ui/: input.ui  main.ui  name.ui
src/utils/: thread_utils.py
src/window/: home.py  window.py
